[gd_scene load_steps=9 format=3 uid="uid://s64x72glj44n"]

[ext_resource type="Texture2D" uid="uid://bkskq570w8ms4" path="res://assets/sprites/objects/conveyor_claw.png" id="1_o8uyj"]
[ext_resource type="Script" path="res://scripts/conveyor_belt.gd" id="1_xmmet"]
[ext_resource type="Texture2D" uid="uid://cr6echesie25m" path="res://assets/sprites/objects/conveyor_belt_center.png" id="2_5kh45"]
[ext_resource type="Texture2D" uid="uid://c11l1c5p3tovd" path="res://assets/sprites/objects/conveyor_belt_end.png" id="3_34e7a"]
[ext_resource type="Script" path="res://scripts/tools/conveyor_belt_tool.gd" id="4_cfx4x"]

[sub_resource type="Gradient" id="Gradient_wmq0j"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7sixu"]
gradient = SubResource("Gradient_wmq0j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vfyfq"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(4, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(1, -1, 0)
initial_velocity_min = 30.0
initial_velocity_max = 40.0
gravity = Vector3(0, 98, 0)
color_ramp = SubResource("GradientTexture1D_7sixu")

[node name="ConveyorBelt" type="Node2D"]
z_index = -1
script = ExtResource("1_xmmet")
metadata/size = 6
metadata/speed = 16.0
metadata/wait_time = 0.0
metadata/start_from_left = false

[node name="Internal" type="Node2D" parent="."]

[node name="Claw" type="Sprite2D" parent="Internal"]
z_index = -1
position = Vector2(0, 5)
texture = ExtResource("1_o8uyj")

[node name="StopParticle" type="GPUParticles2D" parent="Internal/Claw"]
modulate = Color(0.984314, 0.784314, 0.368627, 1)
z_index = 1
position = Vector2(0, -5)
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_vfyfq")
one_shot = true
explosiveness = 1.0

[node name="Belt" type="Sprite2D" parent="Internal"]
z_index = -3
texture_repeat = 2
position = Vector2(0, -1)
texture = ExtResource("2_5kh45")
region_enabled = true
region_rect = Rect2(0, 0, 32, 6)

[node name="BeltEndL" type="Sprite2D" parent="Internal"]
z_index = -3
position = Vector2(-18, -1)
texture = ExtResource("3_34e7a")

[node name="BeltEndR" type="Sprite2D" parent="Internal"]
z_index = -3
position = Vector2(18, -1)
texture = ExtResource("3_34e7a")
flip_h = true

[node name="ConveyorBeltTool" type="Node2D" parent="Internal"]
process_mode = 3
z_index = 10
script = ExtResource("4_cfx4x")
